--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ body {
     width: 100%;
     height: 100%;
 }
+.pd-none{
+    padding: 0;
+}
+.row {
+    margin: 0;
+}
 
 body {
     font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
